--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>github-awesome-list-rank</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.8/vue.min.js"></script>
     <link rel="stylesheet" href="app.css" />
@@ -111,6 +112,7 @@
             if (this.token) {
               this.headers.Authorization = "Bearer " + this.token;
             }
+            console.log(this.headers);
             fetch(url, {
               method: "GET",
               headers: this.headers,
