add visit statistics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>github-awesome-list-rank</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.7.8/vue.min.js"></script>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+
     <link rel="stylesheet" href="app.css" />
   </head>
   <body>
@@ -247,5 +249,6 @@
         },
       });
     </script>
+    <span id="busuanzi_container_site_pv">views:<span id="busuanzi_value_site_pv"></span></span>
   </body>
 </html>
